feat: add display name and interrogation id for a survey unit